--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"repo/background.jpg":["repo/background.jpg"],"repo/github_logo.png":["repo/github_logo.png"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"repo/admob.jpg":["repo/admob.jpg"],"repo/background.jpg":["repo/background.jpg"],"repo/detecthand.mp4":["repo/detecthand.mp4"],"repo/github_logo.png":["repo/github_logo.png"]}
