--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
+            "src": "icons/Icon-512.jpgg",
+            "sizes": "512x512",
+            "type": "image/jpg"
         },
         {
             "src": "icons/Icon-512.jpg",
@@ -20,15 +20,15 @@
             "type": "image/jpg"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
+            "src": "icons/Icon-512.jpg",
+            "sizes": "512x512",
+            "type": "image/jpg",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/Icon-512.jpg",
             "sizes": "512x512",
-            "type": "image/png",
+            "type": "image/jpg",
             "purpose": "maskable"
         }
     ]
